# ChatAI

./: .env.example  .gitignore  README.md  app.py  chat_service.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  main.py  requirements.txt
backend/agent/: asr.py  llm.py  tools.py
backend/agent/asr/: __init__.py  base.py
backend/agent/chains/: __init__.py  conversation_chain.py
backend/agent/llm/: __init__.py  base.py  langchain_llm.py
backend/agent/memory/: __init__.py  conversation_memory.py
backend/agent/prompts/: __init__.py  system_prompts.py
backend/agent/tts/: __init__.py  base.py
backend/agent/vad/: __init__.py  base.py
backend/api/routes/: health.py  websocket.py
backend/core/: config.py
backend/core/config/: settings.py
backend/examples/: langchain_example.py
backend/utils/: audio_utils.py
docs/: ARCHITECTURE.md  LANGCHAIN_GUIDE.md  LANGCHAIN_SUMMARY.md  PROJECT_STRUCTURE.md
expo/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
expo/src/api/: chatApi.ts
expo/src/config/: api.ts
expo/src/hooks/: useChat.ts
expo/src/screens/: VoiceChatScreen.tsx
