[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
dependencies = [
    "langchain==1.2.6",
    "langchain-core==1.2.7",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["ai"]
